--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,8 +16,28 @@
 							%span.icon-bar
 							%span.icon-bar
 						%span.navbar-brand
-							= link_to "RailsGames", root_path
-			#navbar-collapse-target.collapse.navbar-collapse
+							= link_to "Rails Games", root_path
+					#navbar-collapse-target.collapse.navbar-collapse
+						%ul.nav.navbar-nav.navbar-right
+							- if logged_in?
+								%li.dropdown
+									%a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+										%span.glyphicon.glyphicon-user
+										Welcome
+										= current_user.username
+										%b.caret
+									%ul.dropdown-menu
+										%li= link_to "Edit", edit_user_path(current_user)
+										%li= link_to "Logout",logout_path
+							- else
+								%li.dropdown
+									%a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+										%span.glyphicon.glyphicon-user
+										= "Disconnected"
+										%b.caret
+									%ul.dropdown-menu
+										%li= link_to "Login", login_path
+										%li= link_to "Register", new_user_path
 			%footer.footer
 				%a{:href => "https://listminut.be"} ListMinut
 		= yield
