--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,5 @@
-%h1 New User
-= render 'form'
-= link_to 'Back', games_path
+#content
+	%h2.text-center
+		New User
+	= render 'form'
+	= link_to 'Back', games_path
