--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -29,7 +29,7 @@
 		.form-group
 			.col-sm-offset-5.col-sm-3
 				= button_tag(type: 'submit', class: "btn btn-default btn-primary") do
-					%span.glyphicon.glyphicon-log-in
+					%span.glyphicon.glyphicon-floppy-disk
 					Save
 
 		
