--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,16 @@ a:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(64, 229, 11, 1);
 }
 
+img#cover {
+    width:540px; 
+    height: auto;
+}
+
+
+.gap-right {
+  margin-right: 5%; 
+}
+
+.gap-right {
+  margin-top: 2%; 
+}
