--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,12 +21,16 @@
 						%ul.nav.navbar-nav.navbar-right
 							%li.dropdown
 								%a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+									Games
+									%b.caret
+								%ul.dropdown-menu
+									%li= link_to "View All",games_path
+							%li.dropdown
+								%a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
 									Tournaments
 									%b.caret
 								%ul.dropdown-menu
 									%li= link_to "View All",tournaments_path
-									- if logged_in?
-										%li= "My Tournaments"
 							- if logged_in?
 								%li.dropdown
 									%a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
@@ -36,6 +40,7 @@
 										%b.caret
 									%ul.dropdown-menu
 										%li= link_to "Edit", edit_user_path(current_user)
+										%li= link_to "My Profile", profile_path(current_user)
 										%li= link_to "Logout",logout_path
 							- else
 								%li.dropdown
