--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,29 +1,18 @@
 %h1 Listing games
-
-%table.table
-  %tr
-    %th Name
-    %th Description
-    %th Released at
-    %th Platform
-    %th Company
-    %th Grade
-    %th
-    %th
-    %th
-
-  - @games.each do |game|
-    %tr
-      %td= game.name
-      %td= game.description
-      %td= game.released_at
-      %td= game.platform
-      %td= game.company
-      %td= game.grade
-      %td= link_to 'Show', game
-      %td= link_to 'Edit', edit_game_path(game)
-      %td= link_to 'Destroy', game, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
 = link_to 'New Game', new_game_path
+%p
+.container
+  .row
+    .col-md-offset
+      - @games.each do |game|
+        .col-md-3.classeImage
+          = link_to game.name, game
+          .clearfix
+            .img-thumbnail
+              = image_tag(game.cover.url, :id => "cover", :class => "img-rounded") if game.cover?
+          %td= link_to 'Edit', edit_game_path(game)
+          %td= link_to 'Destroy', game, :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+    
+
+
