--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -90,6 +90,10 @@ img#cover {
     width: auto;
 }
 
+img#avatar {
+    height:240px;
+    width: auto;
+}
 
 .gap-right {
   margin-right: 5%; 
@@ -141,3 +145,43 @@ img#cover {
 .caption_button {
   margin-top:50;
 }
+
+#counter {
+  text-align:right;
+  width:855px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:5px;
+  font:12px Verdana;
+}
+ 
+.bad {
+  color:#cc0000;
+}
+
+p.players, p.score, p.save_score {
+  display :inline-block;
+}
+
+p.players_1 {
+  float:left;
+  width:20%;
+}
+
+p.score {
+  float:left;
+  margin-left:10%;
+  margin-right:5%;
+  width:20%;
+}
+
+p.save_score {
+  float:right;
+
+}
+
+P.save_score a {
+  margin-top:0px;
+  height: 30px;
+}
+
