--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -1,33 +1,59 @@
-= form_for @game do |f|
-  - if @game.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@game.errors.count, "error")} prohibited this game from being saved:"
-      %ul
-        - @game.errors.full_messages.each do |msg|
-          %li= msg
+.well
+  = form_for @game,  :html => {:class => 'form-horizontal'} do |f|
+    - if @game.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(@game.errors.count, "error")} prohibited this game from being saved:"
+        %ul
+          - @game.errors.full_messages.each do |msg|
+            %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :description
-    = f.text_area :description
-  .field
-    = f.label :released_at
-    = f.datetime_select :released_at
-  .field
-    = f.label :platform
-    = f.text_field :platform
-  .field
-    = f.label :company
-    = f.text_field :company
-  .field
-    = f.label :grade
-    = f.number_field :grade
+    .form-group
+      = f.label :name, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.text_field :name, :class => 'form-control'  
+    .form-group
+      = f.label :description, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.text_area :description, :class => 'form-control', :maxlength => 380, :rows => 2
+        %p#counter
+    .form-group
+      = f.label :released_at, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.datetime_select :released_at, :class => 'form-control'  
+    .form-group
+      = f.label :platform, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.text_field :platform, :class => 'form-control'  
+    .form-group
+      = f.label :company, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.text_field :company, :class => 'form-control' 
+    .form-group
+      = f.label :grade, :class => 'col-sm-5 control-label required'
+      .col-sm-4   
+        = f.number_field :grade, :class => 'form-control' 
 
-  .form-group
-    = f.label :cover
-    = f.file_field :cover
-    
-  .actions
-    = f.submit 'Save'
+    .form-group
+      = f.label :cover, :class => 'col-sm-5 control-label required'
+      .col-sm-4 
+        = f.file_field :cover
+      
+    .form-group
+      .col-sm-offset-5.col-sm-3
+        = button_tag(type: 'submit', class: "btn btn-default btn-primary") do
+          %span.glyphicon.glyphicon-floppy-disk
+          Save
+
+:javascript
+  $('#game_description').keyup(function() {
+
+    var caracNumber = $(this).val().length;
+
+
+    var msg = ' ' + caracNumber + ' remaining caracters';
+    $('#counter').text(msg);
+    if (caracNumber  0) { $('#counter').addClass("bad"); } else { $('#counter').removeClass("bad"); }
+
+    })
+
+  });
