--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -7,7 +7,11 @@
 		.form-group
 			= f.label :country, :class => 'col-sm-5 control-label required'
 			.col-sm-4
-				= f.text_field :country, :class => 'form-control'		
+				= f.text_field :country, :class => 'form-control'
+		.form-group
+			= f.label :avatar, :class => 'col-sm-5 control-label required'
+			.col-sm-4 
+				= f.file_field :avatar		
 		.form-group
 			.col-sm-offset-5.col-sm-3
 				= button_tag(type: 'submit', class: "btn btn-default btn-primary") do
