--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -30,24 +30,38 @@
             %p
               %strong Maximal number of players:
               = @tournament.max_player        
-            - if logged_in?
-              = link_to "Register for this tournament", tournaments_register_path(:id => @tournament.id)
+            - if logged_in? && !current_user.tournaments.include?(@tournament)
+              = link_to "Register for this tournament", tournaments_register_path(:id => @tournament.id), :class => "btn btn-primary"
+
       #games_and_matches.tab-pane
-        %p
-          %strong Games:
-          %table.table.table-hover.table-condensed
-            %thead
-              %tr
-                %th Name
-                %th Register for a match !
+        - @tournament.games.each do |game|
+          .panel.panel-default
+            .panel-heading
+              = link_to game.name, game
+            .panel-body
+              - if logged_in? && current_user.tournaments.include?(@tournament)
+                = link_to("Register for a match !", tournaments_register_match_path(:id => @tournament.id, :game_id => game.id), :class => "btn btn-primary")
+            %ul.list-group
+              - @tournament.matches.each do |match|
+                -if match.game == game
+                  %li.list-group-item
+                    %p.players.players_1
+                      -if match.player_1.presence
+                        = match.player_1.username
+                    %p.score
+                      =match.player_1_score 
+                      %span - 
+                      =match.player_2_score
+                    %p.players.players_2
+                      -if match.player_2.presence                        
+                        = match.player_2.username
+                    - if @tournament.date < Date.today && match.player_1_score == nil && match.player_2_score == nil
+                      %p.save_score
+                        = link_to("Save a score", edit_match_path(:id => match.id), :class => "btn btn-primary")
+                        
 
-            - @tournament.games.each do |game|
-              %tr
-                %td= link_to game.name, game           
-                - if logged_in? && current_user.tournaments.include?(@tournament)
-                  %td= link_to "Match !", tournaments_register_match_path(:id => @tournament.id, :game_id => game.id)
-              
 
+            
       #ranking.tab-pane
         %p
           %strong Ranking:
