--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-
-
 .navbar-brand a {
   color: #34a90e;
 }
@@ -185,3 +183,44 @@ P.save_score a {
   height: 30px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.well {
+  box-shadow: 1px 1px 12px #555;
+  float:bottom;
+  margin-top:7%;
+  width:80%;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.login_nav p {
+  display: inline-block;
+  font-weight: bold;
+  text-align:center;
+  width:33%;
+  height:100%;
+  vertical-align: middle;
+  padding: 0.7%;
+}
+
+.login_nav {
+  border-radius: 7px;
+  width:100%;
+  height:2em;
+  background-color: #999999;
+  color: #fff;
+  margin-top:5%;
+  margin-bottom:5%;
+}
+
+.login_nav .active {
+  background-color: #34a90e;
+}
+
+.login_nav .p_account {
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
