--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Listing games
-= link_to 'New Game', new_game_path
+- if can? :create, Game
+  = link_to 'New Game', new_game_path
 %p
 .container
   .row
