--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,5 +51,6 @@
 										%b.caret
 									%ul.dropdown-menu
 										%li= link_to "Login", login_path
+										%li= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
 										%li= link_to "Register", new_user_path					
 			= yield
