--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,22 +1,28 @@
 .well
-	= form_for @profile, :html => {:class => 'form-horizontal'} do |f|
-		.form-group
-			= f.label :age, :class => 'col-sm-5 control-label required'
-			.col-sm-4
-				= f.number_field :age, :class => 'form-control'
-		.form-group
-			= f.label :country, :class => 'col-sm-5 control-label required'
-			.col-sm-4
-				= f.text_field :country, :class => 'form-control'
-		.form-group
-			= f.label :avatar, :class => 'col-sm-5 control-label required'
-			.col-sm-4 
-				= f.file_field :avatar		
-		.form-group
-			.col-sm-offset-5.col-sm-3
-				= button_tag(type: 'submit', class: "btn btn-default btn-primary") do
-					%span.glyphicon.glyphicon-floppy-disk
-					Save
+  = form_for @profile, :html => {:class => 'form-horizontal'} do |f|
+    - if @profile.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(@profile.errors.count, "error")} prohibited this profile from being saved:"
+        %ul
+          - @profile.errors.full_messages.each do |msg|
+            %li= msg
+    .form-group
+      = f.label :date_of_birth, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.date_select :date_of_birth, :class => 'form-control'
+    .form-group
+      = f.label :country, :class => 'col-sm-5 control-label required'
+      .col-sm-4
+        = f.text_field :country, :class => 'form-control'
+    .form-group
+      = f.label :avatar, :class => 'col-sm-5 control-label required'
+      .col-sm-4 
+        = f.file_field :avatar    
+    .form-group
+      .col-sm-offset-5.col-sm-3
+        = button_tag(type: 'submit', class: "btn btn-default btn-primary") do
+          %span.glyphicon.glyphicon-floppy-disk
+          Save
 
-		
+    
 
