--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -20,7 +20,7 @@
                 = @user.username
             %p
               %strong Age:
-              = @profile.age
+              = @profile.date_of_birth
             %p
               %strong Country:
               = @profile.country
