--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -49,13 +49,13 @@
                       -if match.player_1.presence
                         = match.player_1.username
                     %p.score
-                      =match.player_1_score 
+                      = match.player_1_score 
                       %span - 
-                      =match.player_2_score
+                      = match.player_2_score
                     %p.players.players_2
                       -if match.player_2.presence                        
                         = match.player_2.username
-                    - if @tournament.date < Date.today && match.player_1_score == nil && match.player_2_score == nil
+                    - if !match.player_1.blank? && !match.player_2.blank? && match.player_1_score == nil && match.player_2_score == nil
                       %p.save_score
                         = link_to("Save a score", edit_match_path(:id => match.id), :class => "btn btn-primary")
                         
@@ -70,7 +70,7 @@
               %tr
                 %th Rank
                 %th Player
-                %th Victories
+                %th Points
             - compt = 1
             - @users_and_victories.each do |user,victories|
               %tr
