--- a/app/views/tournaments/index.html.haml
+++ b/app/views/tournaments/index.html.haml
@@ -31,9 +31,9 @@
 
       .tournament_button
         = link_to('Learn more', tournament, :class => "btn btn-primary" )
-        - if logged_in? && !current_user.tournaments.include?(tournament) && style == "panel-primary" && (can? :register, Tournament)
+        - if user_signed_in? && !current_user.tournaments.include?(tournament) && style == "panel-primary" && (can? :register, Tournament)
           = link_to("Register now !", tournaments_register_path(:id => tournament.id), :class => "btn btn-primary")
-        - elsif logged_in? && current_user.tournaments.include?(tournament)
+        - elsif user_signed_in? && current_user.tournaments.include?(tournament)
           %p You've already registered !
 
 
