--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -30,7 +30,7 @@
             %p
               %strong Maximal number of players:
               = @tournament.max_player        
-            - if logged_in? && !current_user.tournaments.include?(@tournament)
+            - if user_signed_in? && !current_user.tournaments.include?(@tournament)
               = link_to "Register for this tournament", tournaments_register_path(:id => @tournament.id), :class => "btn btn-primary"
 
       #games_and_matches.tab-pane
@@ -39,7 +39,7 @@
             .panel-heading
               = link_to game.name, game
             .panel-body
-              - if logged_in? && current_user.tournaments.include?(@tournament)
+              - if user_signed_in? && current_user.tournaments.include?(@tournament)
                 = link_to("Register for a match !", tournaments_register_match_path(:id => @tournament.id, :game_id => game.id), :class => "btn btn-primary")
             %ul.list-group
               - @tournament.matches.each do |match|
