--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,7 +40,7 @@
                     = current_user.username
                     %b.caret
                   %ul.dropdown-menu
-                    //%li= link_to "Edit", edit_user_path(current_user)
+                    %li= link_to "Edit", edit_user_registration_path(current_user)
                     %li= link_to "My Profile", profile_path(current_user)
                     %li= link_to "Logout",logout_path
               - else
@@ -50,9 +50,9 @@
                     = "Disconnected"
                     %b.caret
                   %ul.dropdown-menu
-                    %li= link_to "Login", new_user_session_path
+                    %li= link_to "Login", login_path
                     %li= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
-                    %li= link_to "Register", new_user_registration_path      
+                    %li= link_to "Register", signup_path      
       - if notice 
         %p.alert.alert-success
           = notice
