--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -224,3 +224,9 @@ P.save_score a {
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
 }
+
+span.error {
+  font-size: x-small;
+  font-style: italic;
+  color:red;
+}
