--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,7 +51,7 @@
                     %b.caret
                   %ul.dropdown-menu
                     %li= link_to "Login", login_path
-                    %li= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in"
+                    %li= link_to "Sign in with Facebook",  user_omniauth_authorize_path(:facebook), id: "sign_in"
                     %li= link_to "Register", signup_path      
       - if notice 
         %p.alert.alert-success
