--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -16,8 +16,8 @@
 		= f.text_field :description
 
 	.field
-		= f.label :place
-		= f.text_field :place
+		= f.label :location_address
+		= f.text_field :location_address
 
 	.field
 		= f.label :date
