--- a/app/views/tournaments/index.html.haml
+++ b/app/views/tournaments/index.html.haml
@@ -18,7 +18,7 @@
         %p
           %span.glyphicon.glyphicon-pushpin
           Place:
-          = tournament.place
+          = tournament.location.address
         %p
           %span.glyphicon.glyphicon-user
           Max Player:
