--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -11,9 +11,9 @@
       .col-sm-4
         = f.date_select :date_of_birth, :class => 'form-control'
     .form-group
-      = f.label :country, :class => 'col-sm-5 control-label required'
-      .col-sm-4
-        = f.text_field :country, :class => 'form-control'
+      = f.label :location_address, :class => 'col-sm-5 control-label required'
+      .col-sm-4 
+        = f.text_field :location_address  
     .form-group
       = f.label :avatar, :class => 'col-sm-5 control-label required'
       .col-sm-4 
