--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
                     %b.caret
                   %ul.dropdown-menu
                     %li= link_to "Edit", edit_user_registration_path(current_user)
-                    %li= link_to "My Profile", profile_path(current_user)
+                    %li= link_to "My Profile", profile_path(current_user.profile)
                     %li= link_to "Logout",logout_path
               - else
                 %li.dropdown
