géolocalisation (code à revoir)

--- a/app/views/_info_window.html.haml
+++ b/app/views/_info_window.html.haml
@@ -1,1 +1,7 @@
-= link_to 'See Space', root_path
+= object.name
+%br/
+= object.date
+%br/
+= object.description
+%br/
+= link_to 'View more', object
