--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -1,34 +1,34 @@
 = form_for @tournament do |f|
-	- if @tournament.errors.any?
-		#error_explanation
-			%h2= "#{pluralize(@tournament.errors.count, "error")} prohibited this tournament from being saved:"
-			%ul
-				- @tournament.errors.full_messages.each do |msg|
-					%li= msg
+  - if @tournament.errors.any?
+    #error_explanation
+      %h2= "#{pluralize(@tournament.errors.count, "error")} prohibited this tournament from being saved:"
+      %ul
+        - @tournament.errors.full_messages.each do |msg|
+          %li= msg
 
 
-	.field
-		= f.label :name
-		= f.text_field :name
+  .field
+    = f.label :name
+    = f.text_field :name
 
-	.field
-		= f.label :description
-		= f.text_field :description
+  .field
+    = f.label :description
+    = f.text_field :description
 
-	.field
-		= f.label :location_address
-		= f.text_field :location_address
+  .field
+    = f.label :address
+    = f.text_field :address
 
-	.field
-		= f.label :date
-		= f.date_select :date
+  .field
+    = f.label :date
+    = f.date_select :date
 
-	.field 
-		= f.label :max_player
-		= f.number_field :max_player
+  .field 
+    = f.label :max_player
+    = f.number_field :max_player
 
-	.field
-		= f.collection_select :game_ids, @games, :id, :name, {},{:multiple => true}
+  .field
+    = f.collection_select :game_ids, @games, :id, :name, {},{:multiple => true}
 
-	.actions
-		= f.submit 'Save'
+  .actions
+    = f.submit 'Save'
