--- a/app/views/tournaments/map.js.erb
+++ b/app/views/tournaments/map.js.erb
@@ -1,1 +1,1 @@
-$('#tab-content_tournament').html("<%= escape_javascript(render('tournament_map')) %>");
+$('#tab-content_tournament').html("<%= escape_javascript(render('tournament_map_form')) %>");
