--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -51,7 +51,7 @@
             %td= tournament.name
             %td= tournament.description
             %td= tournament.date
-            %td= tournament.location.address
+            %td= tournament.address
             %td= tournament.max_player
             %td
               %ul
